add build ver.2.

--- a/sass/components/aside-offer.scss
+++ b/sass/components/aside-offer.scss
@@ -2,9 +2,10 @@
 	//padding: 11px 0 0px;
 	padding: 35px 0 24px;
 	@media (min-width: $lg) {
-		margin-bottom: 35px;
+		margin-bottom: 25px;
 	} @media (min-width: $full-hd) {
-		padding: 122px 0 103px;}
+		padding: 122px 0 103px;
+		margin-bottom: 35px;}
 	.aside-offer__content{
 		display: flex;
 		flex-direction: column;
