--- a/sass/layout/generals.scss
+++ b/sass/layout/generals.scss
@@ -56,8 +56,10 @@
     }
 }
 .txt-link{
-    a:nth-child(2){
-        margin-left: 20px;
+    
+    a:nth-child(1){
+
+         margin-right: 20px;
     }
 }
 .section-default.section-col-with-txt {
