--- a/sass/pages/_ergonomics/_work.scss
+++ b/sass/pages/_ergonomics/_work.scss
@@ -25,7 +25,9 @@
 		 @media (min-width: $md) {
          padding-top: 70px;
         }
-
+@media (min-width: $xle) {
+        padding-top: 104px;
+     }
 	 @media (min-width: $full-hd) {
          padding: 197px 0 216px;
         }
