fix photoswipe img

--- a/sass/pages/_valuation/_generals.scss
+++ b/sass/pages/_valuation/_generals.scss
@@ -80,7 +80,7 @@ input[type="radio"] {
      -webkit-appearance: none;
 }
 input[type="radio"]:checked + label{
-     background-color:#CC3300;
+ //    background-color:#CC3300;
 }
 
     }
